# backend-message-broker

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: c-cpp.yml
include/: IMessageBroker.h  MessageBrokerClient.h  MessageDatabase.h  MessageHandler.h
src/: MessageBrokerClient.cpp  MessageDatabase.cpp  MessageHandler.cpp
tests/: MessageBrokerClientTest.cpp  MockMessageBrokerClient.h  MockMessageListener.h
